--- a/javawebapp-deployment.yml
+++ b/javawebapp-deployment.yml
@@ -13,7 +13,7 @@ spec:
         name: javawebapp
     spec:
       containers:
-      - image: vijaymathi/jenkinspro:latest
+      - image: vijaymathi/jenkinspro
         name: javawebapp
         ports:
         - name: javawebapp
